--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.x"
+    
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
