--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "news-monkey-app",
   "version": "0.1.0",
+  "homepage": "https://itsmeAk03.github.io/News-Monkey-App",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,13 +15,16 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.x"
+    "@babel/plugin-proposal-private-property-in-object": "^7.x",
+    "gh-pages": "^6.1.1"
   },
   "eslintConfig": {
     "extends": [
